--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*------Typography Start----*/
 *{
 	margin:0;
 	padding:0;
@@ -53,7 +54,7 @@ p{
 .floatright{
 	float:right;
 }
-/*-------------------------------------*/
+/*----------------Typography End---------------------*/
 .container{
 	margin:0 auto;
 }
@@ -90,6 +91,7 @@ p{
 	border-bottom: 1px solid #ddd;
 	overflow: hidden;
 	margin-bottom: 50px;
+	font-weight: bold;
 }
 .abt_me_left_side{
 	float: left;
@@ -128,6 +130,52 @@ p{
 	color:white;
 }
 /*-------About Me Part End--------------*/
+/*-------My Services Part Start--------------*/
+.services_part{
+	overflow: hidden;
+	margin-bottom: 30px;
+}
+.services_part h1{
+	text-align: center;
+	font-size: 65px;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 25px;
+	font-weight: bold;
+}
+.My_services_single_area{
+	width:320px;
+	float:left;
+	margin-right: 20px;
+	border:1px solid #ddd;
+	border-radius: 4px;
+}
+.nomrgn_right{
+	margin-right: 0px;
+	float: right;
+}
+.My_services_single_area h3{
+	font-size: 25px;
+}
+.My_services_single_area p{
+	text-align: justify;
+	padding: 2px;
+}
+.My_services_single_area span a{
+	background-color: black;
+	color:white;
+	padding: 10px 18px;
+	border-radius: 4px;
+	margin-bottom: 1px;
+	display: block;
+	text-align: center;
+}
+.My_services_single_area a:hover{
+	text-decoration: none;
+
+}
+
+
+/*-------My Services Part End--------------*/
 
 
 
