--- a/style.css
+++ b/style.css
@@ -133,6 +133,9 @@ p{
 }
 /*-------About Me Part End--------------*/
 /*-------My Services Part Start--------------*/
+.my_services_bg{
+	
+}
 .services_part{
 	/*--overflow: hidden;--*/
 	margin-bottom: 30px;
@@ -175,15 +178,20 @@ p{
 }
 .My_services_single_area a:hover{
 	text-decoration: none;
-	
 	background-color: beige;
 }
-
-
 /*-------My Services Part End--------------*/
-
-
-
+/*-------Contact form Part start--------------*/
+..contact_form_area{
+	margin-top: 20px;
+}
+.contact_form_area h1{
+	text-align: center;
+	font-size:60px;
+	font-weight:bold ;
+	margin-bottom: 1px solid #ddd;
+}
+/*-------Contact form Part End--------------*/
 
 
 
