css edit commit

--- a/style.css
+++ b/style.css
@@ -59,10 +59,11 @@ p{
 	margin:0 auto;
 }
 .bakground_bg{
-	background-color: #F6F5F3;
+	background-color: #D2B48C;
 }
 .background_1st_img img{
 	width:1020px;
+	vertical-align:middle;
 }
 /*-------Background Image Part Start----------*/
 .Text_center{
@@ -185,11 +186,17 @@ p{
 	margin-top: 20px;
 	
 }
-.contact_form_area h1{
+.contact_form{
+	width: 1020px;
+	margin-left: 0px;
+	border-radius: 5px;
+}
+.contact_us_h1{
 	text-align: center;
 	font-size:60px;
 	font-weight:bold ;
-	margin-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 40px;
 }
 .contact_us_bg{
 	background-color:#FFFFFF;
@@ -226,11 +233,7 @@ input[type=text], select, textarea {
  input[type=submit]:hover {
 	background-color: #45a049;
   }
-  .contact_form {
-	border-radius: 5px;
-  /*background-color: #f2f2f2;*/
-	padding: 20px;
-  }
+  
 /*-------Contact form Part End--------------*/
 
 
